Added new fonts and a new Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+@import 'remixicon/fonts/remixicon.css';
+
+:root {
+    --font-primary: 'DM Sans', sans-serif;
+    --font-secondary: 'Raleway', sans-serif;
+  }
+  
+  body {
+    font-family: var(--font-primary);
+  }
+  
